// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management index page designs does not render toolbar when there is no permission 1`] = `
<div
  class="gl-mt-5 designs-root"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="mt-4"
  >
    <ol
      class="list-unstyled row"
    >
      <!---->
       
      <li
        class="gl-flex-direction-column col-md-6 col-lg-3 gl-mb-3"
        data-testid="design-dropzone-wrapper"
      >
        <design-dropzone-stub
          class="design-list-item design-list-item-new"
          hasdesigns="true"
        />
      </li>
       
      <li
        class="col-md-6 col-lg-3 gl-mb-3"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            event="NONE"
            filename="design-1-name"
            id="design-1"
            image="design-1-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <!---->
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            event="NONE"
            filename="design-2-name"
            id="design-2"
            image="design-2-image"
            notescount="1"
          />
        </design-dropzone-stub>
         
        <!---->
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            event="NONE"
            filename="design-3-name"
            id="design-3"
            image="design-3-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <!---->
      </li>
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders designs list and header with upload button 1`] = `
<div
  class="gl-mt-5 designs-root"
  data-testid="designs-root"
>
  <header
    class="row-content-block border-top-0 p-2 d-flex"
  >
    <div
      class="gl-display-flex gl-justify-content-space-between gl-align-items-center gl-w-full"
    >
      <div>
        <span
          class="gl-font-weight-bold gl-mr-3"
        >
          Designs
        </span>
         
        <design-version-dropdown-stub />
      </div>
       
      <div
        class="qa-selector-toolbar gl-display-flex"
      >
        <gl-button-stub
          category="tertiary"
          class="gl-mr-2 js-select-all"
          icon=""
          size="small"
          variant="link"
        >
          Select all
        
        </gl-button-stub>
         
        <div>
          <delete-button-stub
            buttonclass="gl-mr-4"
            buttonsize="small"
            buttonvariant="danger"
          >
            
            Delete selected
            
            <!---->
          </delete-button-stub>
        </div>
         
        <upload-button-stub />
      </div>
    </div>
  </header>
   
  <div
    class="mt-4"
  >
    <ol
      class="list-unstyled row"
    >
      <!---->
       
      <li
        class="gl-flex-direction-column col-md-6 col-lg-3 gl-mb-3"
        data-testid="design-dropzone-wrapper"
      >
        <design-dropzone-stub
          class="design-list-item design-list-item-new"
          hasdesigns="true"
        />
      </li>
       
      <li
        class="col-md-6 col-lg-3 gl-mb-3"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            event="NONE"
            filename="design-1-name"
            id="design-1"
            image="design-1-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <input
          class="design-checkbox"
          type="checkbox"
        />
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            event="NONE"
            filename="design-2-name"
            id="design-2"
            image="design-2-image"
            notescount="1"
          />
        </design-dropzone-stub>
         
        <input
          class="design-checkbox"
          type="checkbox"
        />
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            event="NONE"
            filename="design-3-name"
            id="design-3"
            image="design-3-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <input
          class="design-checkbox"
          type="checkbox"
        />
      </li>
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders error 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="mt-4"
  >
    <gl-alert-stub
      dismisslabel="Dismiss"
      primarybuttonlink=""
      primarybuttontext=""
      secondarybuttonlink=""
      secondarybuttontext=""
      title=""
      variant="danger"
    >
      
      An error occurred while loading designs. Please try again.
    
    </gl-alert-stub>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders loading icon 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="mt-4"
  >
    <gl-loading-icon-stub
      color="orange"
      label="Loading"
      size="md"
    />
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page when has no designs renders design dropzone 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="mt-4"
  >
    <ol
      class="list-unstyled row"
    >
      <span
        class="gl-font-weight-bold gl-font-weight-bold gl-ml-5 gl-mb-4"
      >
        Designs
      </span>
       
      <li
        class="col-12"
        data-testid="design-dropzone-wrapper"
      >
        <design-dropzone-stub
          class=""
        />
      </li>
       
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;
